--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -172,36 +172,31 @@
 
 
 <div class="text-section2">
-<h1>MARIE KONDO’S SIMPLE TIPS FOR A CLEANER, JOYFUL SPACE</h1>
+<h1>MASTER THE ART OF MAKEUP: TIPS AND TRICKS FOR EVERY LOOK</h1>
 </div>
 
 <div class="text-section">
-  <p>Marie Kondo, a Japanese organizing consultant and author, is globally renowned for her minimalist philosophy and her revolutionary approach to tidying, known as the KonMari Method. Her work emphasizes the profound connection between physical space and mental well-being, advocating for intentional living through the art of decluttering. Kondo’s method resonates across cultures, particularly in a world increasingly concerned with sustainability and mental health. By encouraging individuals to live with intention and appreciate the items they own, she inspires a broader dialogue about how our environments affect our inner peace.</p>
-</div>
-
-
-<div class="btn-1">
-<a href="https://youtube.com/@mariekondotv?si=f3NhIIhR0BZqDvuq" target="_blank" class="button button-blue">SUBSCRIBE</a>
+  <p>A collection of videos featuring makeup tips and tricks is available to help enhance any beauty routine. These tutorials provide step-by-step guidance on a variety of techniques, from achieving a flawless base to creating bold eye looks. Designed to be both informative and inspiring, the videos cater to all skill levels, offering practical advice and creative ideas. They encourage experimentation, helping viewers discover new products and perfect their application methods. With these resources, makeup becomes a fun and empowering tool for self-expression.</p>
 </div>
 
 
 <section id="popular" class="bg">
-<h2>MARIE KONDO VIDEOS</h2>
+<h2>MAKEUP TIPS AND TRICKS VIDEOS</h2>
 <div class="container">
 <div class="video-wrapper">
-<iframe src="https://www.youtube.com/embed/IjkmqbJTLBM?si=8HE5fH90udKvtS5g"  alt="The KonMari Fold - Basics" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/M77ylsZe-Eg?si=Bw_ZotrdfkJbB20F" alt="ULTIMATE Beginners Guide to Makeup: Step by Step, Product by Product" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <div class="video-wrapper">
-<iframe src="https://www.youtube.com/embed/FipZIrwtADg?si=M1fYPwHMAfyRDtM0" alt="Introducing KonMari" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/3sbLJgq6pog?si=Ge6uFERo8oeNbXxy" alt="EASY Pro Tips: That Will Transform Your Makeup" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <div class="video-wrapper">
-<iframe src="https://www.youtube.com/embed/qo2v645STW0?si=p7pHf_Ip2d7l2fHJ" alt="KonMari Method - Finish Discarding First and Let Go With Gratitude" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/EVuwe44aIYA?si=owaoGmW_K9AOPero" alt="5 Pro Makeup Tips for Beginners!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <div class="video-wrapper">
-<iframe src="https://www.youtube.com/embed/bjUlC8aEb7s?si=jRAItGXHglCRC3v-"  alt="KonMari Method - Fundamentals of Tidying" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/PJHft4hvwjA?si=1ONBMa5ifNiV7W3Y" alt="Common Makeup Mistakes and How to Correct Them" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </div>
 </section>
@@ -314,7 +309,7 @@ if (key == "h") {
 } 
  
 </script>
-<main><canvas id="defaultCanvas0" class="p5Canvas" width="800" height="800" style="width: 400px;height: 400px;margin-left: 650px;margin-bottom: 50px;"></canvas></main>
+<main><canvas id="defaultCanvas0" class="p5Canvas" width="800" height="800" style="width: 400px;height: 400px;margin-left: 300px;margin-bottom: 50px;"></canvas></main>
 
 </body>
 </html>
