--- a/entries/entry3/entry3.html
+++ b/entries/entry3/entry3.html
@@ -119,8 +119,8 @@
 
 <h1 class="game-title" style="color: rgb(237, 229, 248);">Unleash Your Inner Artist With This Drawing Game</h1>
 
-<h1 style="color:rgb(75, 56, 105);">Select the color you want to use and draw on the board.</h1>
-<p style="color: rgb(75, 56, 105);">Use the erase tool or the clear button to create a new design. <strong>Keep</strong> or <strong>Discard</strong>.</p>
+<h1 style="color:rgb(75, 56, 105); text-align: center;">Select the color you want to use and draw on the board.</h1>
+<p style="color: rgb(75, 56, 105); text-align: center;">Use the erase tool or the clear button to create a new design.</p>
 
 <canvas onmousedown="start()" onmouseup="end()" onmousemove="draw(event)" id="myCanvas" width="300" height="300"></canvas>
 <button onclick="cleanse()">Clear</button>
