--- a/entries/entry3/entry3.html
+++ b/entries/entry3/entry3.html
@@ -119,8 +119,8 @@
 
 <h1 class="game-title" style="color: rgb(237, 229, 248);">Unleash Your Inner Artist With This Drawing Game</h1>
 
-<h1 style="color:rgb(75, 56, 105); text-align: center;">Select the color you want to use and draw on the board.</h1>
-<p style="color: rgb(75, 56, 105); text-align: center; font-size: 20px;">Use the erase tool or the clear button to create a new design.</p>
+<h1 style="color:rgb(75, 56, 105); text-align: center;">Hover over the canvas and use our curser to start drawing.</h1>
+<p style="color: rgb(75, 56, 105); text-align: center; font-size: 20px;">Use the clear canvas button to create a new design.</p>
 
 <div class="canvas-container">
   <canvas id="drawingCanvas" width="500" height="500"></canvas>
