--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -113,8 +113,8 @@
 </div>
     <h1 class="game-title" style="color: rgb(234, 192, 199);">Play Marie Kondo's "Spark Joy" Drag-and-Drop Sorting Game</h1>
 
-    <h1 style="color:rgb(224, 113, 133);">Does It Spark Joy?</h1>
-    <p style="color: rgb(224, 113, 133);">Drag items into the correct bin: <strong>Keep</strong> or <strong>Discard</strong>.</p>
+    <h1 style="color:rgb(224, 113, 133); text-align: center;">Does It Spark Joy?</h1>
+    <p style="color: rgb(224, 113, 133); text-align: center;">Drag items into the correct bin: <strong>Keep</strong> or <strong>Discard</strong>.</p>
   
     <div class="drag-container">
       <div class="items">
