--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -50,43 +50,18 @@
     </div>
     <br>
 
-    <div class="options">
-      <button id="americano">Americano</button>
-      <button id="au_lait">Au lait</button>
-      <button id="capuccino">Capuccino</button>
-      <button id="corretto">Corretto</button>
-      <button id="espresso">Espresso</button>
-      <button id="latte">Latte</button>
-      <button id="lungo">Lungo</button>
-      <button id="macchiato">Macchiato</button>
-      <button id="mocha">Mocha</button>
-      <button id="ristretto">Ristretto</button>
+<div class="coffee-container">
+  <div class="coffee-cup">
+      <div class="coffee-fill" id="coffeeFill"></div>
+      <div class="milk-fill" id="milkFill"></div>
   </div>
-  
-  <div class="coffee-container">
-    <div class="coffee-cup">
-        <div class="coffee-fill" id="coffeeFill"></div>
-    </div>
-    <div class="controls">
-        <button class="coffee-btn" data-coffee="small">Small</button>
-        <button class="coffee-btn" data-coffee="medium">Medium</button>
-        <button class="coffee-btn" data-coffee="large">Large</button>
-    </div>
+  <div class="controls">
+      <button class="coffee-btn" data-coffee="americano">Americano</button>
+      <button class="coffee-btn" data-coffee="latte">Latte</button>
+      <button class="coffee-btn" data-coffee="cappuccino">Cappuccino</button>
+      <button class="coffee-btn" data-coffee="macchiato">Macchiato</button>
+  </div>
 </div>
-  
-
-    <div class="image-gallery">
-        <img src="assets/IMG_1631.JPEG" class="gallery" alt="Outside of Dunkin" />
-        <img src="assets/IMG_5409.JPG" class="gallery" alt="Dunkin App" />
-        <img src="assets/IMG_5413.JPG" class="gallery" alt="Ordering"/>
-        <img src="assets/IMG_5411.JPG" class="gallery" alt="Order Pickup" />
-        <img src="assets/IMG_1637.JPEG" class="gallery" alt="Picture of What I Ordered" />
-        <img src="assets/IMG_5412.JPG" class="gallery" alt="With Order" />
-        <img src="assets/IMG_5410.JPG" class="gallery" alt="With Order 2" />
-    </div>
-
-</body>
-</html>
     
 <button onclick="topFunction()" id="myBtn" title="Go to top">TOP</button>
 
@@ -111,22 +86,24 @@
         document.documentElement.scrollTop = 0;
       }
 
-     
-        const coffeeFill = document.getElementById('coffeeFill');
+      const coffeeFill = document.getElementById('coffeeFill');
+        const milkFill = document.getElementById('milkFill');
         const coffeeButtons = document.querySelectorAll('.coffee-btn');
 
-        // Set different fill heights based on coffee size
-        const coffeeSizes = {
-            small: 30,   // 30% fill
-            medium: 60,  // 60% fill
-            large: 100   // 100% fill
+        // Set different fill ratios based on coffee type
+        const coffeeTypes = {
+            americano: { coffee: 80, milk: 0 }, // Mostly coffee, little to no milk
+            latte: { coffee: 40, milk: 60 },    // 40% coffee, 60% milk
+            cappuccino: { coffee: 30, milk: 70 }, // 30% coffee, 70% foam/milk
+            macchiato: { coffee: 70, milk: 30 }  // Mostly coffee, a dash of milk
         };
 
         coffeeButtons.forEach(button => {
             button.addEventListener('click', () => {
-                const size = button.getAttribute('data-coffee');
-                const fillHeight = coffeeSizes[size];
-                coffeeFill.style.height = `${fillHeight}%`;
+                const type = button.getAttribute('data-coffee');
+                const { coffee, milk } = coffeeTypes[type];
+                coffeeFill.style.height = `${coffee}%`;
+                milkFill.style.height = `${milk}%`;
             });
         });
     </script>
