--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -50,6 +50,9 @@
     </div>
     <br>
 
+    <div class="outfit-title">
+      <h2>HOW DO YOU LIKE YOUR COFFEE?</h2>
+</div>
 
     <div class="coffee-container">
       <div class="coffee-cup">
