--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -54,6 +54,9 @@
       <h2>HOW DO YOU LIKE YOUR COFFEE?</h2>
 </div>
 
+<h1 style="color:rgb(224, 113, 133); text-align: center;">Click on the buttons below to select your preferred coffee style.</h1>
+<p style="color: rgb(224, 113, 133); text-align: center;">Watch the cup fill to match your choice!</p>
+
     <div class="coffee-container">
       <div class="coffee-cup">
           <div class="coffee-fill" id="coffeeFill"></div>
