--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="text-section2">
-            <p>ENTRY 5</p>
+            <h1>ENTRY 5</h1>
     </div>
     <div class="text-section">
         <p>My ritual of getting coffee at Dunkin' goes beyond simply grabbing a cup of caffeine. It involves small, repetitive steps that form a comforting routine in my day. It begins with the anticipation of the taste and the energy boost, followed by the familiar process of walking into Dunkin', knowing exactly what I am going to order. The sensory experience is part of the ritual too—the smell of brewing coffee, the sound of baristas working, and the hum of the space. The act of receiving my drink, the first sip, and continuing on my day brings a moment of focus and comfort, creating a sense of structure in my morning. The ritual is a calming, predictable routine in a busy life, grounding myself in a moment of familiarity before the rest of the day unfolds.</p>
@@ -55,8 +55,10 @@
 </div>
 
 <h1 style="color:rgb(224, 113, 133); text-align: center;">Click on the buttons below to select your preferred coffee style.</h1>
-<p style="color: rgb(224, 113, 133); text-align: center;">Watch the cup fill to match your choice!</p>
+<p style="color: rgb(224, 113, 133); text-align: center; font-family: Garamond, Georgia, 'Times New Roman', Times, serif; font-style: italic; font-size: 20px;">Watch the cup fill to match your choice!</p>
+<br>
 
+<br>
     <div class="coffee-container">
       <div class="coffee-cup">
           <div class="coffee-fill" id="coffeeFill"></div>
