--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="text-section2">
-            <h1>ENTRY 5</h1>
+            <p>ENTRY 5</p>
     </div>
     <div class="text-section">
         <p>My ritual of getting coffee at Dunkin' goes beyond simply grabbing a cup of caffeine. It involves small, repetitive steps that form a comforting routine in my day. It begins with the anticipation of the taste and the energy boost, followed by the familiar process of walking into Dunkin', knowing exactly what I am going to order. The sensory experience is part of the ritual too—the smell of brewing coffee, the sound of baristas working, and the hum of the space. The act of receiving my drink, the first sip, and continuing on my day brings a moment of focus and comfort, creating a sense of structure in my morning. The ritual is a calming, predictable routine in a busy life, grounding myself in a moment of familiarity before the rest of the day unfolds.</p>
@@ -71,7 +71,17 @@
           <button class="coffee-btn" data-coffee="macchiato">Macchiato</button>
       </div>
     </div>
+<br>
 
+<br>
+  <div class="outfit-title">
+      <h2>HERE IS A GLIMPSE INTO MY DAILY COFFEE RITUAL</h2>
+</div>
+
+<p style="color: rgb(224, 113, 133); text-align: center; font-family: Garamond, Georgia, 'Times New Roman', Times, serif; font-style: italic; font-size: 20px;">Take a look at the images below to follow along as I go to Dunkin', order my favorite drink, and enjoy the comforting routine that starts my day.</p>
+<br>
+
+<br>
     <div class="image-gallery">
         <img src="assets/IMG_1631.JPEG" class="gallery" alt="Outside of Dunkin" />
         <img src="assets/IMG_5409.JPG" class="gallery" alt="Dunkin App" />
