Dunkin Order Entry 5

--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -81,6 +81,15 @@
 <p style="color: rgb(224, 113, 133); text-align: center; font-family: Garamond, Georgia, 'Times New Roman', Times, serif; font-style: italic; font-size: 20px;">Take a look at the images below to follow along as I go to Dunkin', order my favorite drink, and enjoy the comforting routine that starts my day.</p>
 <br>
 
+<div class="receipt-container">
+  <div class="receipt-title">DUNKIN ORDER</div>
+  <ul class="receipt-list">
+    <li>Medium Iced Blueberry Pecan Latte</li>
+    <li>Almondmilk</li>
+  </ul>
+</div>
+
+
 <br>
     <div class="image-gallery">
         <img src="assets/IMG_1631.JPEG" class="gallery" alt="Outside of Dunkin" />
