--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -78,16 +78,19 @@
       <h2>HERE IS A GLIMPSE INTO MY DAILY COFFEE RITUAL</h2>
 </div>
 
-<p style="color: rgb(224, 113, 133); text-align: center; font-family: Garamond, Georgia, 'Times New Roman', Times, serif; font-style: italic; font-size: 20px;">Take a look at the images below to follow along as I go to Dunkin', order my favorite drink, and enjoy the comforting routine that starts my day.</p>
-<br>
-
 <div class="receipt-container">
   <div class="receipt-title">DUNKIN ORDER</div>
-  <ul class="receipt-list">
-    <li>Medium Iced Blueberry Pecan Latte</li>
-    <li>Almondmilk</li>
-  </ul>
+  <div class="receipt-item">Medium Iced Blueberry Pecan Latte</div>
+  <div class="receipt-item">Almondmilk</div>
 </div>
+
+<div class="text-section">
+  <p>Take a look at the images below to follow along as I go to Dunkin', order my favorite drink, and enjoy the comforting routine that starts my day.</p>
+</div>
+
+
+<p style="color: rgb(224, 113, 133); text-align: center; font-family: Garamond, Georgia, 'Times New Roman', Times, serif; font-style: italic; font-size: 20px;">Take a look at the images below to follow along as I go to Dunkin', order my favorite drink, and enjoy the comforting routine that starts my day.</p>
+<br>
 
 
 <br>
