--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -81,10 +81,13 @@
 <div class="receipt-container">
   <div class="receipt-title">DUNKIN ORDER</div>
   <hr class="receipt-line">
-  <div class="receipt-item">Medium Iced Blueberry Pecan Latte</div>
+  <div class="receipt-item">Medium Iced Latte</div>
+  <hr class="receipt-line">
+  <div class="receipt-item">Blueberry Pecan</div>
   <hr class="receipt-line">
   <div class="receipt-item">Almondmilk</div>
 </div>
+<br>
 
 <div class="text-section">
   <p style="text-align: center;">Take a look at the images below to follow along as I go to Dunkin', order my favorite drink, and enjoy the comforting routine that starts my day.</p>
