--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -79,7 +79,7 @@
 </div>
 
 <div class="receipt-container">
-  <div class="receipt-title">DUNKIN ORDER</div>
+  <div class="receipt-title">AUTUMN'S DUNKIN ORDER</div>
   <hr class="receipt-line">
   <div class="receipt-item">Medium Iced Latte</div>
   <hr class="receipt-line">
